Add tela Principal

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 <body ng-app="MyApp">
 
   <div class="navbar-fixed">
-    <nav>
-      <div class="nav-wrapper red ">
-        <a href="#!" class="brand-logo">Modulo Samu</a>
+    <nav >
+      <div class="nav-wrapper blue lighten-3 ">
+        <a href="#!" class="brand-logo">Chamados Emergênciais</a>
         <a href="#" data-activates="mobile-demo" class="button-collapse show-on-large"><img style="margin-top:20%;" src="fonts/menu.svg"></a>
         <ul class="side-nav" id="mobile-demo">
           <li><a href="#formularioChamado" onclick="$('.button-collapse').sideNav('hide'); iniciarCaptura();">Iniciar Chamado</a></li>
