--- a/paginas/telaPrincipal.html
+++ b/paginas/telaPrincipal.html
@@ -1,31 +1,29 @@
-<div class="row" style="margin-top: 10%;">
+<div class="row center-align tela-chamado">
+    <div class="col s6">
+        <a href="#preChamado" title="">
+            <h1>SAMU</h1>
+            <img src="img/samu.jpg" class=" responsive-img"/>
+        </a>
+    </div>
+    <div class="col s6">
+        <a href="#andamentoChamado" title="">
+            <h1>POLICIA MILITAR</h1>
+            <img src="img/militar.png" class=" responsive-img"/>
+        </a>
+    </div>
+</div>
 
-      <div class="col s6">
-      	<p class="center-align">
-                SAMU
-        </p>
-        <img src="img/samu.jpg"  alt="" class=" responsive-img"/> <!-- notice the "circle" class -->
-      </div>
-      <div class="col s6">
-      	<p class="center-align">
-                POLICIA MILITAR
-        </p>
-       <img src="img/militar.png"  alt="" class=" responsive-img"/> <!-- notice the "circle" class -->
-      </div>
-  </div>
-    
-    <div class="row" style="margin-top: 20%;">
-
-      <div class="col s6">
-      	<p class="center-align">
-                BOMBEIROS
-        </p>
-        <img src="img/bombeiros.png"  alt="" class=" responsive-img"/> <!-- notice the "circle" class -->
-      </div>
-      <p class="center-align">
-                DELEGACIA DA MULHER
-        </p>
-      <div class="col s6">
-       <img src="img/civil.png"  alt="" class="responsive-img"/> <!-- notice the "circle" class -->
-      </div>
-   </div>
+<div class="row center-align tela-chamado">
+    <div class="col s6">
+        <a href="" title="">
+            <h1>CORPO DE BOMBEIROS</h1>
+            <img src="img/bombeiros.png" class=" responsive-img"/>
+        </a>
+    </div>
+    <div class="col s6">
+        <a href="" title="">
+            <h1>DELEGACIA DA MULHER</h1>
+            <img src="img/civil.png" class="responsive-img"/>
+        </a>
+    </div>
+</div>
