nova tela preChamados, alterações em geral

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="#!" class="brand-logo">Chamados Emergênciais</a>
         <a href="#" data-activates="mobile-demo" class="button-collapse show-on-large"><img style="margin-top:20%;" src="fonts/menu.svg"></a>
         <ul class="side-nav" id="mobile-demo">
-          <li><a href="#formularioChamado" onclick="$('.button-collapse').sideNav('hide'); iniciarCaptura();">Iniciar Chamado</a></li>
+          <li><a href="#telaPrincipal" onclick="$('.button-collapse').sideNav('hide'); iniciarCaptura();">Iniciar Chamado</a></li>
           <li><a href="#andamentoChamado" onclick="$('.button-collapse').sideNav('hide');" >Adamento do Chamado</a></li>
           <li><a href="#sobre" onclick="$('.button-collapse').sideNav('hide');" >Sobre</a></li>
         </ul>
