--- a/paginas/preChamadoSamu.html
+++ b/paginas/preChamadoSamu.html
@@ -1,13 +1,13 @@
 <div class="row center-align tela-chamado">
     <div class="col s6">
-        <a href="#preChamadoSamu" title="">
-            <h1>SAMU</h1>
+        <a href="#formularioChamado" ng-click="vitimaComSangue()" title="">
+            <h1>Sangramento</h1>
             <img src="img/samu.jpg" class=" responsive-img"/>
         </a>
     </div>
     <div class="col s6">
         <a href="#andamentoChamado" title="">
-            <h1>POLICIA MILITAR</h1>
+            <h1>Fratura</h1>
             <img src="img/militar.png" class=" responsive-img"/>
         </a>
     </div>
@@ -15,13 +15,13 @@
 
 <div class="row center-align tela-chamado">
     <div class="col s6">
-        <a href="#andamentoChamado" title="">
+        <a href="" title="">
             <h1>CORPO DE BOMBEIROS</h1>
             <img src="img/bombeiros.png" class=" responsive-img"/>
         </a>
     </div>
     <div class="col s6">
-        <a href="#andamentoChamado" title="">
+        <a href="" title="">
             <h1>DELEGACIA DA MULHER</h1>
             <img src="img/civil.png" class="responsive-img"/>
         </a>
