Alteração nas rotas, criação de novas rotas para as novas telas. Alteração na tela de PreChamados criação da tela de apresentação

--- a/paginas/preChamadoSamu.html
+++ b/paginas/preChamadoSamu.html
@@ -1,29 +1,59 @@
 <div class="row center-align tela-chamado">
     <div class="col s6">
         <a href="#formularioChamado" ng-click="vitimaComSangue()" title="">
-            <h1>Sangramento</h1>
-            <img src="img/samu.jpg" class=" responsive-img"/>
+            <h1></h1>
+            <img src="img/01_com_sangue.png" class=" responsive-img"/>
         </a>
     </div>
     <div class="col s6">
-        <a href="#andamentoChamado" title="">
-            <h1>Fratura</h1>
-            <img src="img/militar.png" class=" responsive-img"/>
+        <a href="#andamentoChamado" ng-click="vitimaComDor()" title="">
+            <h1></h1>
+            <img src="img/02_com_dor.png" class=" responsive-img"/>
         </a>
     </div>
 </div>
 
 <div class="row center-align tela-chamado">
     <div class="col s6">
-        <a href="" title="">
-            <h1>CORPO DE BOMBEIROS</h1>
-            <img src="img/bombeiros.png" class=" responsive-img"/>
+        <a href=""  ng-click="vitimaSemMovimento()" title="">
+            <h1></h1>
+            <img src="img/03_sem_movimentos.png" class=" responsive-img"/>
         </a>
     </div>
     <div class="col s6">
-        <a href="" title="">
-            <h1>DELEGACIA DA MULHER</h1>
-            <img src="img/civil.png" class="responsive-img"/>
+        <a href=""  ng-click="vitimaComFratura()" title="">
+            <h1></h1>
+            <img src="img/04_com_fraturas.png" class="responsive-img"/>
+        </a>
+    </div>
+</div>
+
+<div class="row center-align tela-chamado">
+    <div class="col s6">
+        <a href="" ng-click="vitimaComQueimadura()"  title="">
+            <h1></h1>
+            <img src="img/07_com_queimadura.png" class=" responsive-img"/>
+        </a>
+    </div>
+    <div class="col s6">
+        <a href=""  ng-click="vitimaComDorPeito()" title="">
+            <h1></h1>
+            <img src="img/08_com_dor_no_peito.png" class="responsive-img"/>
+        </a>
+    </div>
+</div>
+
+<div class="row center-align tela-chamado">
+    <div class="col s6">
+        <a href="" ng-click="vitimaComFebre()"  title="">
+            <h1></h1>
+            <img src="img/05_com_febre.png" class=" responsive-img"/>
+        </a>
+    </div>
+    <div class="col s6">
+        <a href=""  ng-click="vitimaComDorPeito()" title="">
+            <h1></h1>
+            <img src="img/08_com_dor_no_peito.png" class="responsive-img"/>
         </a>
     </div>
 </div>
