--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
   <ul id="slide-out" class="side-nav">
     <li><div class="user-view">
       <div class="background">
-        <img src="images/office.jpg">
+        <img src="img/logoApp.jpeg">
       </div>
       <a href="#!user"><img class="circle" src="http://via.placeholder.com/100x100"></a>
-      <a href="#!name"><span class="white-text name">John Doe</span></a>
-      <a href="#!email"><span class="white-text email">jdandturk@gmail.com</span></a>
+      <a href="#!name"><span class="white-text name">Fale conosco</span></a>
+      <a href="#!email"><span class="white-text email">suporte@chamadosemegenciais.com</span></a>
     </div></li>
     <li><a href="#telaPrincipal" onclick="$('.button-collapse').sideNav('hide'); iniciarCaptura();">Iniciar Chamado</a></li>
     <li><a href="#andamentoChamado" onclick="$('.button-collapse').sideNav('hide');" >Adamento do Chamado</a></li>
@@ -47,7 +47,7 @@
     <li><a href="#sobre" onclick="$('.button-collapse').sideNav('hide');" >Sobre</a></li>
   </ul> -->
 
-  <div class="content" id="divDinamica">
+  <div class="content " id="divDinamica">
     <ng-view></ng-view>
   </div>
 
