--- a/paginas/telaApresentacao.html
+++ b/paginas/telaApresentacao.html
@@ -1,1 +1,4 @@
- <img class="responsive-img" src="img/Imagem_App.png">
+<div class="background">
+        <img class="responsive-img telaApresentacao" src="img/Imagem_App.png">	
+</div>
+
