Correção de erro no formulario

--- a/paginas/formularioChamado.html
+++ b/paginas/formularioChamado.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <form class="col s12">
+  <form id="formChamado" name="formChamado" ng-submit="salveSubmit()" class="col s12">
    <label>Tipo de Chamado</label>
    <p>
     <input class="with-gap" name="group1" ng-model="chamado.tipo"  ng-value="false" type="radio" id="test3"/>
