adição do status da vitima no Json de envio do chamado alteração tela de Prechamado

--- a/paginas/preChamadoSamu.html
+++ b/paginas/preChamadoSamu.html
@@ -15,13 +15,13 @@
 
 <div class="row center-align tela-chamado">
     <div class="col s6">
-        <a href=""  ng-click="vitimaSemMovimento()" title="">
+        <a href="#formularioChamado"  ng-click="vitimaSemMovimento()" title="">
             <h1></h1>
             <img src="img/03_sem_movimentos.png" class=" responsive-img"/>
         </a>
     </div>
     <div class="col s6">
-        <a href=""  ng-click="vitimaComFratura()" title="">
+        <a href="#formularioChamado"  ng-click="vitimaComFratura()" title="">
             <h1></h1>
             <img src="img/04_com_fraturas.png" class="responsive-img"/>
         </a>
@@ -30,28 +30,28 @@
 
 <div class="row center-align tela-chamado">
     <div class="col s6">
-        <a href="" ng-click="vitimaComQueimadura()"  title="">
+        <a href="#formularioChamado" ng-click="vitimaComQueimadura()"  title="">
             <h1></h1>
             <img src="img/07_com_queimadura.png" class=" responsive-img"/>
         </a>
     </div>
     <div class="col s6">
-        <a href=""  ng-click="vitimaComDorPeito()" title="">
+        <a href="#formularioChamado"  ng-click="vitimaComTontura()" title="">
             <h1></h1>
-            <img src="img/08_com_dor_no_peito.png" class="responsive-img"/>
+            <img src="img/06_com_tontura.png" class="responsive-img"/>
         </a>
     </div>
 </div>
 
 <div class="row center-align tela-chamado">
     <div class="col s6">
-        <a href="" ng-click="vitimaComFebre()"  title="">
+        <a href="#formularioChamado" ng-click="vitimaComFebre()"  title="">
             <h1></h1>
             <img src="img/05_com_febre.png" class=" responsive-img"/>
         </a>
     </div>
     <div class="col s6">
-        <a href=""  ng-click="vitimaComDorPeito()" title="">
+        <a href="#formularioChamado"  ng-click="vitimaComDorPeito()" title="">
             <h1></h1>
             <img src="img/08_com_dor_no_peito.png" class="responsive-img"/>
         </a>
