adição de load no envio dos chamados

--- a/paginas/formularioChamado.html
+++ b/paginas/formularioChamado.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" ng-show="aux">
   <form id="formChamado" name="formChamado" ng-submit="salveSubmit()" class="col s12">
    <label>Tipo de Chamado</label>
    <p>
@@ -48,4 +48,20 @@
   </a> 
 </button>
 </form>
+
+<div class="center" style="margin-top:100px;">
+  <div class="preloader-wrapper big active" ng-if=aux2>
+    <div class="spinner-layer spinner-blue-only">
+      <div class="circle-clipper left">
+        <div class="circle"></div>
+      </div><div class="gap-patch">
+        <div class="circle"></div>
+      </div><div class="circle-clipper right">
+        <div class="circle"></div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 </div>
