correção no load

--- a/paginas/formularioChamado.html
+++ b/paginas/formularioChamado.html
@@ -1,4 +1,4 @@
-<div class="row" ng-show="aux">
+<div class="row" ng-show="!aux">
   <form id="formChamado" name="formChamado" ng-submit="salveSubmit()" class="col s12">
    <label>Tipo de Chamado</label>
    <p>
