--- a/paginas/formularioChamado.html
+++ b/paginas/formularioChamado.html
@@ -43,7 +43,7 @@
     </tbody>
   </table> 
 
-  <button class="btn green" type="submit" name="action" ng-click="enviarForm(chamado)" ng-disabled="!formChamado.$valid"><a>Enviar 
+  <button class="btn green" type="submit" name="action" ng-click="enviarForm(chamado) mostrarLoader();" ng-disabled="!formChamado.$valid"><a>Enviar 
     <i class="material-icons right">send</i>
   </a> 
 </button>
