--- a/paginas/formularioChamado.html
+++ b/paginas/formularioChamado.html
@@ -49,7 +49,7 @@
 </button>
 </form>
 
-<div class="center" style="margin-top:100px;">
+<div class="center" >
   <div class="preloader-wrapper big active" ng-if=aux2>
     <div class="spinner-layer spinner-blue-only">
       <div class="circle-clipper left">
