alteração na index - adição da logo, alteração sobre do projeto, alteração css

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body ng-app="MyApp">
   <div class="navbar-fixed">
     <nav>
-      <div class="nav-wrapper">
+      <div class="nav-wrapper blue">
         <a href="#!" class="brand-logo">Chamados Emergenciais</a>
         <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
 
@@ -31,7 +31,7 @@
   <ul id="slide-out" class="side-nav">
     <li><div class="user-view">
       <div class="background">
-        <img src="img/logoApp.jpeg">
+        <img src="img/logo1.jpeg">
       </div>
       <a href="#!user"><img class="circle" src="http://via.placeholder.com/100x100"></a>
       <a href="#!name"><span class="white-text name">Fale conosco</span></a>
