--- a/paginas/sobre.html
+++ b/paginas/sobre.html
@@ -1,6 +1,6 @@
 <div class="content">
  <h5 class="header center" id="titulo">Sobre</h5>
- <p class="text" id="texto" > Aplicativo desenvolvido com intuito de atender chamados emergências da Policia, SAMU, Bombeiros, e Delegacia da Mulher. </p>
+ <p class="text" id="texto" > Aplicativo desenvolvido com intuito de atender chamados emergências da Policia, SAMU, Bombeiros, e Delegacia da Mulher para deficientes auditivos. <span id="textoNegrito">Grande diferencial do projeto é o foco em tecnologia assistiva. </span></p>
  <p class="text" id="texto" > Nesse protótipo está presente o módulo SAMU, que Realiza os chamados emergências do <span id="textoNegrito">Serviço de Atendimento Móvel de Urgência (SAMU)</span>. </p>
  
  <h5 class="header center" id="titulo">Integrantes do Projeto</h5>
@@ -73,11 +73,32 @@
     </div>
   </div>
 </div>
+</div>
+
+<div class="card-panel grey lighten-5 z-depth-1">
+    <div class="row valign-wrapper">
+      <div class="col s5 m3">
+        <img src="img/john.jpg"  alt="" class="circle responsive-img"/> <!-- notice the "circle" class -->
+      </div>
+      <div class="col s10">
+        <span class="black-text">
+         <ul>
+          <li> Jonathas Ramos de Oliveira</li>
+
+          <li style="font-weight: bolder;"> IFBA - Curso superior de Tecnologia  em Analise e Desenvovimento de Sistemas</li>
+
+          <li>jonathas.john@outlook.com</li>
+        </ul>
+
+      </span>
+
+    </div>
+  </div>
 </div>    
 </div>
 
 
-<footer class="page-footer red">
+<footer class="page-footer blue">
   <div class="container">
     <div class="row">
       <div class="col l6 s12">
