--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <a href="#!email"><span class="white-text email">suporte@chamadosemegenciais.com</span></a>
     </div></li>
     <li><a href="#telaPrincipal" onclick="$('.button-collapse').sideNav('hide'); iniciarCaptura();">Iniciar Chamado</a></li>
-    <li><a href="#andamentoChamado" onclick="$('.button-collapse').sideNav('hide');" >Adamento do Chamado</a></li>
+    <li><a href="#andamentoChamado" onclick="$('.button-collapse').sideNav('hide');" >Andamento do Chamado</a></li>
     <li><a href="#sobre" onclick="$('.button-collapse').sideNav('hide');" >Sobre</a></li>
   </ul>
  <!-- <ul class="sidenav" id="mobile-demo">
