--- a/paginas/preChamadoSamu.html
+++ b/paginas/preChamadoSamu.html
@@ -6,7 +6,7 @@
         </a>
     </div>
     <div class="col s6">
-        <a href="#andamentoChamado" ng-click="vitimaComDor()" title="">
+        <a href="#formularioChamado" ng-click="vitimaComDor()" title="">
             <h1></h1>
             <img src="img/02_com_dor.png" class=" responsive-img"/>
         </a>
