--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body ng-app="MyApp">
   <div class="navbar-fixed">
     <nav>
-      <div class="nav-wrapper blue">
+      <div class="nav-wrapper blue darken-4">
         <a href="#!" class="brand-logo">Chamados Emergenciais</a>
         <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
 
