--- a/paginas/sobre.html
+++ b/paginas/sobre.html
@@ -98,7 +98,7 @@
 </div>
 
 
-<footer class="page-footer blue">
+<footer class="page-footer blue darken-4">
   <div class="container">
     <div class="row">
       <div class="col l6 s12">
